--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -180,10 +180,18 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div id="zoneset">
+                                <div id="zoneset" ng-show="!!wiModal.well">
                                     <h5 class="normal-text">Zonation</h5>
                                     <div class="padding-left-10-percent">
                                         <div class="form-group">
+                                            <label class="control-label col-sm-3" for="track">
+                                                Show ZoneSet
+                                            </label>
+                                            <div class="col-sm-8">
+                                                <input type="checkbox" ng-model="wiModal.props.general.showZoneSet">
+                                            </div>
+                                        </div>
+                                        <div class="form-group" ng-show="wiModal.props.general.showZoneSet">
                                             <label class="control-label col-sm-3" for="track">
                                                 Select ZoneSet
                                             </label>
