--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -199,7 +199,7 @@
                         on-zone-ctrl-ready="wiXplotCtrl.onZoneCtrlReady"></wi-zone>
                     </wi-container>
                 </div>
-                <wi-xplot style='flex:1; display: flex;' id-curves='wiXplotCtrl.idCurves' config='wiXplotCtrl.config'></wi-xplot>
+                <wi-xplot style='flex:1; display: flex;' curves-properties='wiXplotCtrl.curvesProperties' config='wiXplotCtrl.config'></wi-xplot>
                 <div resizable r-directions="['left']" r-flex="true"
                     ng-show="wiXplotCtrl.config.referenceDisplay" style="width:20%;min-width:10%;max-width:30%">
                     <wi-container name='RefCrossplotContainer'
