--- a/source/dialogs/fill-pattern/fill-pattern-modal.html
+++ b/source/dialogs/fill-pattern/fill-pattern-modal.html
@@ -6,25 +6,24 @@
                 <h4><span class="curve-average-16x16"></span>&nbsp;Choose Pattern</h4>
             </div>
             <div class="modal-body dialog-style">
-                <div class="col-sm-7">
+                <div class="col-sm-9">
                     <div class="wrapper-style">
                         <div style='background-color:white;border:none;display: flex;padding-top: 2px;padding-bottom: 2px;' 
                             class="panel-heading">
                             <i style="font-size: 16px; line-height:28px;z-index:1;color:#aaa;float: left;" class="fa fa-search"></i>
-                            <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;' size='10' ng-model="filter" ng-init="filter=''">
+                            <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;'ng-model="wiModal.filter">
                         </div>
-                        <div style="height: 400px;overflow-y: auto;">
+                        <div style="height: 400px;overflow-y: auto;" class="list-pattern-style">
                             <wi-base-treeview
                                 container="wiModal"
                                 config="wiModal.config"
                                 on-click-function='wiModal.onClickFunction'
-                                filter="{{filter}}">
+                                filter="{{wiModal.filter}}">
                             </wi-base-treeview>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-2">...</div>
-                <div class="col-sm-3" style="position: fixed; top: 70px; right: 20px">
+                <div class="col-sm-3">
                     <wi-canvas-rect name="{{wiModal.name}}" 
                                     pattern="{{wiModal.name}}" 
                                     width="128" height="128" 
