Update: Pan crossplot

--- a/source/html/simpleLayout.html
+++ b/source/html/simpleLayout.html
@@ -121,8 +121,8 @@
                         <wi-button name="NeuralNetWorkPlayground" icon="browse-project-32x32" label="NN Playground" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.NeuralNetworkPlaygroundButtonClicked"></wi-button>
                         <wi-button name="wiPlotPlayground" icon="browse-project-32x32" label="Wi Plot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiPlotButtonClicked"></wi-button>
                         <wi-button name="wiLogplotPlayground" icon="logplot-blank-32x32" label="Wi Logplot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiLogplotButtonClicked"></wi-button>
-                        <wi-button name="wiXplot" icon="browse-project-32x32" label="Wi Xplot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiXplotButtonClicked"></wi-button>
-                        <wi-button name="wiHis" icon="browse-project-32x32" label="Wi His" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiHisButtonClicked"></wi-button>
+                        <wi-button name="wiXplot" icon="crossplot-blank-32x32" label="Wi Xplot" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiXplotButtonClicked"></wi-button>
+                        <wi-button name="wiHis" icon="histogram-blank-32x32" label="Wi His" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.wiHisButtonClicked"></wi-button>
                         <wi-button name="ExitButton" icon="exit-32x32" label="Exit" container="ribbon" disabled="handlers.isDisabled()" class="height65" handler="handlers.ExitButtonClicked"></wi-button>
                     </wi-toolbar>
                 </wi-tab>
