--- a/source/dialogs/confirm/confirm-modal.html
+++ b/source/dialogs/confirm/confirm-modal.html
@@ -1,5 +1,5 @@
 <div class='modal fade' data-backdrop="static" data-keyboard="false">
-	<div class='modal-dialog modal-sm'>
+	<div class='modal-dialog modal-md'>
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" ng-click="wiModal.close(false)" aria-hidden="true">&times;</button>
@@ -9,9 +9,10 @@
 				<span style="font-style: italic; color: #281D1B" ng-bind-html="wiModal.confirmMsg"></span>
 			</div>
 			<div class="modal-footer">
-				<button class='btn btn-default' ng-click='wiModal.close(true)'
+				<button ng-if="wiModal.actions" ng-repeat="action in wiModal.actions" class='btn btn-default' ng-click='action.onClick(wiModal)'>{{action.title}}</button>
+				<button ng-if="!wiModal.actions" class='btn btn-default' ng-click='wiModal.close(true)'
 						style="color: #000">Ok</button>
-				<button class='btn btn-default' ng-click='wiModal.close(false)'>Cancel</button>
+				<button ng-if="!wiModal.actions" class='btn btn-default' ng-click='wiModal.close(false)'>Cancel</button>
 			</div>
 		</div>
 	</div>
