--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -5,8 +5,7 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title"><span class="images-properties-16x16"></span>&nbsp;Histogram Format</h4>
             </div>
-
-            <div class="modal-body dialog-style">
+            <div class="modal-body dialog-style" style='overflow: unset;'>
                 <wi-tabset>
                     <wi-tab heading='Scales'>
                         <div class="padding-1em container-fluid">
