--- a/source/dialogs/annotation-properties/annotation-properties-modal.html
+++ b/source/dialogs/annotation-properties/annotation-properties-modal.html
@@ -52,7 +52,7 @@
                                 <div class="col-sm-8">
                                     <select ng-model="wiModal.props.vAlign" class="form-control wi-form-control" id="vAlign" ng-disabled="wiModal.props.fitBounds">
                                         <option value="Top">Top</option>
-                                        <option value="Center">Center</option>
+                                        <option value="Middle">Middle</option>
                                         <option value="Bottom">Bottom</option>
                                     </select>
                                 </div>
