--- a/source/dialogs/fill-pattern/fill-pattern-modal.html
+++ b/source/dialogs/fill-pattern/fill-pattern-modal.html
@@ -14,12 +14,15 @@
                             <input type='text' style='flex:1; margin-left: -22px; padding-left: 32px;color:steelblue;'ng-model="wiModal.filter">
                         </div>
                         <div style="height: 400px;overflow-y: auto;" class="list-pattern-style">
-                            <wi-base-treeview
-                                container="wiModal"
-                                config="wiModal.config"
-                                on-click-function='wiModal.onClickFunction'
-                                filter="{{wiModal.filter}}">
-                            </wi-base-treeview>
+                            <wi-scroll style="height:60vh;overflow-y:auto;" 
+                                        up-trigger="wiModal.upTrigger" down-trigger='wiModal.downTrigger'>
+                                <wi-base-treeview
+                                    container="wiModal"
+                                    config="wiModal.config"
+                                    on-click-function='wiModal.onClickFunction'
+                                    filter="{{wiModal.filter}}">
+                                </wi-base-treeview>
+                            </wi-scroll>
                         </div>
                     </div>
                 </div>
